@@ -1,0 +1,30 @@
+
+**** SMTP testing session as if from host 1.2.3.4
+**** but without any ident (RFC 1413) callback.
+**** This is not for real!
+
+220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+221 myhost.test.ex closing connection
+
+**** SMTP testing session as if from host 5.6.7.8
+**** but without any ident (RFC 1413) callback.
+**** This is not for real!
+
+220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+250-myhost.test.ex Hello ident at hostname [5.6.7.8]
+250-SIZE 52428800
+250-PIPELINING
+250 HELP
+250 OK
+250 Reset OK
+250 OK
+221 myhost.test.ex closing connection
+220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+250-myhost.test.ex Hello ident at hostname [5.6.7.8]
+250-SIZE 52428800
+250-PIPELINING
+250 HELP
+250 OK
+250 Reset OK
+250 OK
+221 myhost.test.ex closing connection
